--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,6 +1,8 @@
 /* Import Tailwind configuration */
 @import "./tailwind.css";
 @import "./dark-mode.css";
+@import "./chat.css";
+@import "./notification-animations.css";
 
 /* Additional global styles */
 :root {
